welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: ')' expected but $XMLSTART$< found.
  if (90 <n< 100 ||  190< n <210){return true}
         ^nearHundred:4: error: illegal start of simple expression
}
^